@@ -2,7 +2,6 @@
 
  - document UserParameters $1,...,$9
  - make alternative to $1-$9: {1}-{9}
- - remove escalations from GUI
  - redefine constants to have prefix ZBX_* in common.h
  - http://www.zabbix.com/forum/showthread.php?p=6360#post6360
  - http://www.zabbix.com/forum/showthread.php?t=1849
@@ -11,7 +10,6 @@
  - fix undeleted warnings for host and trigger statuses
  - make agents return error message if not supported or not available
  - centralised management of agent configuration files
- - escalations
  - add encryption between server and agents
  - how to disable unreachable hosts
  - new item status: not available. If agent doesn't accept parameter.
