@@ -1,5 +1,6 @@
 Changes for 1.1beta5:
 
+ - escalations removed from GUI (Alexei)
  - fixed typo in tr_comments.php (Alexei)
 
 Changes for 1.1beta4:
